--- a/ch04/makefile
+++ b/ch04/makefile
@@ -13,7 +13,10 @@ OBJ = main.o getop.o getch.o stack.o atof.o
 calc: $(OBJ)
 	$(CC) -o $@ $^ $(CFLAGS)
 
-.PHONY: clean
+.PHONY: clean clobber
 
 clean:
+	rm -f *.o
+
+clobber:
 	rm -f *.o calc
